--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An web application that can manage your expense,especially withn a group, in your trip",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --progress --colors --watch |node server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chen Gong",
